# gdoc-tools

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  chat_interactive.py  example.py  example_llm.py  gdoc_fetcher.py  gdoc_llm.py  gdoc_processor.py  gdoc_reader.py  pyproject.toml  requirements.txt  setup.py  test_basic.py
